Quan ly menu done

--- a/app/src/main/res/layout/ph_fragment_manage.xml
+++ b/app/src/main/res/layout/ph_fragment_manage.xml
@@ -47,6 +47,7 @@
 
         <!-- Nút Thanh toán -->
         <Button
+            android:id="@+id/btnQuanLyThucDon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Quản lý thực đơn"
