--- a/app/src/main/res/layout/ph_fragment_notification.xml
+++ b/app/src/main/res/layout/ph_fragment_notification.xml
@@ -5,4 +5,6 @@
     android:layout_height="match_parent"
     android:text="Thông báo"
     android:textSize="24sp"
-    android:gravity="center" />
+    android:gravity="center"
+    android:clickable="true"
+    android:focusable="true" />
