--- a/app/src/main/res/layout/pa_act_pay.xml
+++ b/app/src/main/res/layout/pa_act_pay.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFFFFF"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
@@ -84,25 +84,38 @@
 
         <LinearLayout
             android:id="@+id/llThanhtoan"
-            android:layout_width="match_parent"
+            android:layout_width="148dp"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:background="@drawable/sffff7721sw1cr16bff7621"
-            android:paddingVertical="0dp"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="35dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/sffff7721sw1cr16bff7621"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingVertical="0dp"
             app:layout_constraintBottom_toBottomOf="@id/llTong"
-            app:layout_constraintStart_toEndOf="@id/llTong"
-            android:orientation="vertical">
+            app:layout_constraintStart_toEndOf="@id/llTong">
+
+
             <Button
                 android:id="@+id/btnThanhToan"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="560dp"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:text="Thanh toán"
                 android:textColor="#FFFFFF"
                 android:textSize="17sp"
-                android:textStyle="bold"
-                android:background="@android:color/transparent"/>
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnTichDiem"
+                android:layout_width="560dp"
+                android:layout_height="wrap_content"
+                android:background="#808080"
+                android:text="Tích điểm"
+                android:textColor="#ffffff"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
 
 
